--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,25 @@
+
 steps:
-  - id: 'tf init' 
-  - name: 'hashicorp/terraform:1.0.0'
-  - entrypoint: sh
-  - args:
+  - id: 'tf plan'
+    name: 'hashicorp/terraform:1.0.0'
+    entrypoint: 'sh'
+    args:
     - -c
     - |
         terraform -chdir=./networking init && terraform -chdir=./cluster init
 
   - id: 'tf plan' 
-  - name: 'hashicorp/terraform:1.0.0'
-  - entrypoint: sh
-  - args:
+    name: 'hashicorp/terraform:1.0.0'
+    entrypoint: sh
+    args:
     - -c
     - |
         terraform -chdir=./networking plan && terraform -chdir=./cluster plan
 
   - id: 'tf apply' 
-  - name: 'hashicorp/terraform:1.0.0'
-  - entrypoint: sh
-  - args:
+    name: 'hashicorp/terraform:1.0.0'
+    entrypoint: sh
+    args:
     - -c
     - |
         terraform -chdir=./networking apply -auto-approve && terraform -chdir=./cluster apply -auto-approve
